tests/invalid/return_outside_procedure.lang
module main

return 2;
